withTree/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> type_declarations
Rule 2     type_declarations -> type_declaration
Rule 3     type_declarations -> type_declarations , type_declaration
Rule 4     type_declaration -> class_declaration
Rule 5     class_header_name -> modifiers_opt CLASS NAME
Rule 6     class_declaration -> class_header_name class_body
Rule 7     modifiers_opt -> modifiers
Rule 8     modifiers_opt -> empty
Rule 9     modifiers -> modifier
Rule 10    modifiers -> modifiers modifier
Rule 11    class_body -> opening_bracket classbodydecllist closing_bracket
Rule 12    tmain -> tmain_header opening_bracket method_body closing_bracket
Rule 13    tmain_header -> tmain_name ( formal_parameter_list_opt )
Rule 14    tmain_name -> modifiers_opt type MAIN
Rule 15    opening_bracket -> {
Rule 16    closing_bracket -> }
Rule 17    classbodydecllist -> classbodydecl
Rule 18    classbodydecllist -> classbodydecllist classbodydecl
Rule 19    classbodydecl -> method_declaration
Rule 20    classbodydecl -> tmain
Rule 21    classbodydecl -> field_declartaion
Rule 22    field_declartaion -> modifiers_opt type variable_declarators ;
Rule 23    method_declaration -> abstract_method_declaration
Rule 24    method_declaration -> method_header opening_bracket method_body closing_bracket
Rule 25    abstract_method_declaration -> method_header ;
Rule 26    method_header -> method_header_name ( formal_parameter_list_opt )
Rule 27    method_header_name -> modifiers_opt type NAME
Rule 28    method_body -> block_statements
Rule 29    formal_parameter_list_opt -> formal_parameter_list
Rule 30    formal_parameter_list_opt -> empty
Rule 31    formal_parameter_list -> formal_parameter
Rule 32    formal_parameter_list -> formal_parameter_list , formal_parameter
Rule 33    formal_parameter -> type variable_declarator_id
Rule 34    variable_declarator_id -> NAME
Rule 35    type -> primitive_type
Rule 36    type -> array_type
Rule 37    array_type -> primitive_type dims
Rule 38    array_type -> name dims
Rule 39    dims -> [ ]
Rule 40    dims -> dims [ ]
Rule 41    primitive_type -> BOOLEAN
Rule 42    primitive_type -> VOID
Rule 43    primitive_type -> BYTE
Rule 44    primitive_type -> SHORT
Rule 45    primitive_type -> INT
Rule 46    primitive_type -> LONG
Rule 47    primitive_type -> CHAR
Rule 48    primitive_type -> FLOAT
Rule 49    primitive_type -> DOUBLE
Rule 50    primitive_type -> STRING
Rule 51    modifier -> PUBLIC
Rule 52    modifier -> PROTECTED
Rule 53    modifier -> PRIVATE
Rule 54    modifier -> STATIC
Rule 55    modifier -> ABSTRACT
Rule 56    modifier -> FINAL
Rule 57    modifier -> NATIVE
Rule 58    name -> simple_name
Rule 59    name -> qualified_name
Rule 60    simple_name -> NAME
Rule 61    qualified_name -> name . simple_name
Rule 62    empty -> <empty>
Rule 63    block_statements -> block_statement
Rule 64    block_statements -> block_statements block_statement
Rule 65    block_statement -> local_variable_declaration_statement
Rule 66    block_statement -> statement
Rule 67    local_variable_declaration_statement -> local_variable_declaration ;
Rule 68    local_variable_declaration -> type variable_declarators
Rule 69    local_variable_declaration -> modifiers type variable_declarators
Rule 70    variable_declarators -> variable_declarator
Rule 71    variable_declarators -> variable_declarators , variable_declarator
Rule 72    variable_declarator -> variable_declarator_id
Rule 73    variable_declarator -> variable_declarator_id = variable_initializer
Rule 74    variable_initializer -> primary
Rule 75    statement -> other_statement
Rule 76    statement -> if_then_statement
Rule 77    statement -> if_then_else_statement
Rule 78    statement -> while_statement
Rule 79    statement -> do_while_statement
Rule 80    other_statement -> expression_statement
Rule 81    other_statement -> break_statement
Rule 82    other_statement -> return_statement
Rule 83    other_statement -> continue_statement
Rule 84    other_statement -> ;
Rule 85    expression_statement -> statement_expression ;
Rule 86    statement_expression -> assignment
Rule 87    statement_expression -> unary_expression
Rule 88    statement_expression -> method_invocation
Rule 89    method_invocation -> NAME ( argument_list )
Rule 90    method_invocation -> NAME ( )
Rule 91    argument_list -> expression
Rule 92    argument_list -> argument_list , expression
Rule 93    break_statement -> BREAK ;
Rule 94    break_statement -> BREAK NAME ;
Rule 95    return_statement -> RETURN expression_opt ;
Rule 96    expression_opt -> expression
Rule 97    expression_opt -> empty
Rule 98    continue_statement -> CONTINUE ;
Rule 99    if_then_statement -> IF ( expression ) opening_bracket block_statements closing_bracket
Rule 100   if_then_else_statement -> IF ( expression ) opening_bracket block_statements closing_bracket else
Rule 101   else -> ELSE opening_bracket block_statements closing_bracket
Rule 102   while_statement -> WHILE ( expression ) opening_bracket block_statements closing_bracket
Rule 103   do_while_statement -> DO opening_bracket block_statements closing_bracket WHILE ( expression ) ;
Rule 104   expression -> assignment_expression
Rule 105   assignment_expression -> assignment
Rule 106   assignment_expression -> conditional_expression
Rule 107   assignment -> postfix_expression assignment_operator assignment_expression
Rule 108   assignment_operator -> =
Rule 109   assignment_operator -> TIMES_ASSIGN
Rule 110   assignment_operator -> DIVIDE_ASSIGN
Rule 111   assignment_operator -> REMAINDER_ASSIGN
Rule 112   assignment_operator -> PLUS_ASSIGN
Rule 113   assignment_operator -> MINUS_ASSIGN
Rule 114   conditional_expression -> conditional_or_expression
Rule 115   conditional_or_expression -> conditional_and_expression
Rule 116   conditional_or_expression -> conditional_or_expression OR conditional_and_expression
Rule 117   conditional_and_expression -> inclusive_or_expression
Rule 118   conditional_and_expression -> conditional_and_expression AND inclusive_or_expression
Rule 119   inclusive_or_expression -> and_expression
Rule 120   inclusive_or_expression -> inclusive_or_expression | and_expression
Rule 121   and_expression -> equality_expression
Rule 122   and_expression -> and_expression & equality_expression
Rule 123   equality_expression -> equality_expression EQ relational_expression
Rule 124   equality_expression -> equality_expression NEQ relational_expression
Rule 125   equality_expression -> relational_expression
Rule 126   relational_expression -> additive_expression
Rule 127   relational_expression -> relational_expression > additive_expression
Rule 128   relational_expression -> relational_expression < additive_expression
Rule 129   relational_expression -> relational_expression GTEQ additive_expression
Rule 130   relational_expression -> relational_expression LTEQ additive_expression
Rule 131   additive_expression -> multiplicative_expression
Rule 132   additive_expression -> additive_expression + multiplicative_expression
Rule 133   additive_expression -> additive_expression - multiplicative_expression
Rule 134   multiplicative_expression -> unary_expression
Rule 135   multiplicative_expression -> multiplicative_expression * unary_expression
Rule 136   multiplicative_expression -> multiplicative_expression / unary_expression
Rule 137   multiplicative_expression -> multiplicative_expression % unary_expression
Rule 138   unary_expression -> pre_increment_expression
Rule 139   unary_expression -> pre_decrement_expression
Rule 140   unary_expression -> + unary_expression
Rule 141   unary_expression -> - unary_expression
Rule 142   unary_expression -> postfix_expression
Rule 143   pre_increment_expression -> PLUSPLUS unary_expression
Rule 144   pre_decrement_expression -> MINUSMINUS unary_expression
Rule 145   postfix_expression -> primary
Rule 146   postfix_expression -> name
Rule 147   postfix_expression -> post_increment_expression
Rule 148   postfix_expression -> post_decrement_expression
Rule 149   post_increment_expression -> postfix_expression PLUSPLUS
Rule 150   post_decrement_expression -> postfix_expression MINUSMINUS
Rule 151   primary -> literal
Rule 152   primary -> array_access
Rule 153   array_access -> name [ expression ]
Rule 154   literal -> NUM
Rule 155   literal -> CHAR_LITERAL
Rule 156   literal -> STRING_LITERAL
Rule 157   literal -> TRUE
Rule 158   literal -> FALSE
Rule 159   literal -> NULL

Terminals, with rules where they appear

%                    : 137
&                    : 122
(                    : 13 26 89 90 99 100 102 103
)                    : 13 26 89 90 99 100 102 103
*                    : 135
+                    : 132 140
,                    : 3 32 71 92
-                    : 133 141
.                    : 61
/                    : 136
;                    : 22 25 67 84 85 93 94 95 98 103
<                    : 128
=                    : 73 108
>                    : 127
ABSTRACT             : 55
AND                  : 118
BOOLEAN              : 41
BREAK                : 93 94
BYTE                 : 43
CHAR                 : 47
CHAR_LITERAL         : 155
CLASS                : 5
CONTINUE             : 98
DIVIDE_ASSIGN        : 110
DO                   : 103
DOUBLE               : 49
ELSE                 : 101
EQ                   : 123
FALSE                : 158
FINAL                : 56
FLOAT                : 48
GTEQ                 : 129
IF                   : 99 100
INT                  : 45
LONG                 : 46
LTEQ                 : 130
MAIN                 : 14
MINUSMINUS           : 144 150
MINUS_ASSIGN         : 113
NAME                 : 5 27 34 60 89 90 94
NATIVE               : 57
NEQ                  : 124
NULL                 : 159
NUM                  : 154
OR                   : 116
PLUSPLUS             : 143 149
PLUS_ASSIGN          : 112
PRIVATE              : 53
PROTECTED            : 52
PUBLIC               : 51
REMAINDER_ASSIGN     : 111
RETURN               : 95
SHORT                : 44
STATIC               : 54
STRING               : 50
STRING_LITERAL       : 156
TIMES_ASSIGN         : 109
TRUE                 : 157
VOID                 : 42
WHILE                : 102 103
[                    : 39 40 153
]                    : 39 40 153
error                : 
{                    : 15
|                    : 120
}                    : 16

Nonterminals, with rules where they appear

abstract_method_declaration : 23
additive_expression  : 126 127 128 129 130 132 133
and_expression       : 119 120 122
argument_list        : 89 92
array_access         : 152
array_type           : 36
assignment           : 86 105
assignment_expression : 104 107
assignment_operator  : 107
block_statement      : 63 64
block_statements     : 28 64 99 100 101 102 103
break_statement      : 81
class_body           : 6
class_declaration    : 4
class_header_name    : 6
classbodydecl        : 17 18
classbodydecllist    : 11 18
closing_bracket      : 11 12 24 99 100 101 102 103
conditional_and_expression : 115 116 118
conditional_expression : 106
conditional_or_expression : 114 116
continue_statement   : 83
dims                 : 37 38 40
do_while_statement   : 79
else                 : 100
empty                : 8 30 97
equality_expression  : 121 122 123 124
expression           : 91 92 96 99 100 102 103 153
expression_opt       : 95
expression_statement : 80
field_declartaion    : 21
formal_parameter     : 31 32
formal_parameter_list : 29 32
formal_parameter_list_opt : 13 26
if_then_else_statement : 77
if_then_statement    : 76
inclusive_or_expression : 117 118 120
literal              : 151
local_variable_declaration : 67
local_variable_declaration_statement : 65
method_body          : 12 24
method_declaration   : 19
method_header        : 24 25
method_header_name   : 26
method_invocation    : 88
modifier             : 9 10
modifiers            : 7 10 69
modifiers_opt        : 5 14 22 27
multiplicative_expression : 131 132 133 135 136 137
name                 : 38 61 146 153
opening_bracket      : 11 12 24 99 100 101 102 103
other_statement      : 75
post_decrement_expression : 148
post_increment_expression : 147
postfix_expression   : 107 142 149 150
pre_decrement_expression : 139
pre_increment_expression : 138
primary              : 74 145
primitive_type       : 35 37
qualified_name       : 59
relational_expression : 123 124 125 127 128 129 130
return_statement     : 82
simple_name          : 58 61
start                : 0
statement            : 66
statement_expression : 85
tmain                : 20
tmain_header         : 12
tmain_name           : 13
type                 : 14 22 27 33 68 69
type_declaration     : 2 3
type_declarations    : 1 3
unary_expression     : 87 134 135 136 137 140 141 143 144
variable_declarator  : 70 71
variable_declarator_id : 33 72 73
variable_declarators : 22 68 69 71
variable_initializer : 73
while_statement      : 78

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . type_declarations
    (2) type_declarations -> . type_declaration
    (3) type_declarations -> . type_declarations , type_declaration
    (4) type_declaration -> . class_declaration
    (6) class_declaration -> . class_header_name class_body
    (5) class_header_name -> . modifiers_opt CLASS NAME
    (7) modifiers_opt -> . modifiers
    (8) modifiers_opt -> . empty
    (9) modifiers -> . modifier
    (10) modifiers -> . modifiers modifier
    (62) empty -> .
    (51) modifier -> . PUBLIC
    (52) modifier -> . PROTECTED
    (53) modifier -> . PRIVATE
    (54) modifier -> . STATIC
    (55) modifier -> . ABSTRACT
    (56) modifier -> . FINAL
    (57) modifier -> . NATIVE

    CLASS           reduce using rule 62 (empty -> .)
    PUBLIC          shift and go to state 10
    PROTECTED       shift and go to state 11
    PRIVATE         shift and go to state 12
    STATIC          shift and go to state 13
    ABSTRACT        shift and go to state 14
    FINAL           shift and go to state 15
    NATIVE          shift and go to state 16

    start                          shift and go to state 1
    type_declarations              shift and go to state 2
    type_declaration               shift and go to state 3
    class_declaration              shift and go to state 4
    class_header_name              shift and go to state 5
    modifiers_opt                  shift and go to state 6
    modifiers                      shift and go to state 7
    empty                          shift and go to state 8
    modifier                       shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> type_declarations .
    (3) type_declarations -> type_declarations . , type_declaration

    $end            reduce using rule 1 (start -> type_declarations .)
    ,               shift and go to state 17


state 3

    (2) type_declarations -> type_declaration .

    ,               reduce using rule 2 (type_declarations -> type_declaration .)
    $end            reduce using rule 2 (type_declarations -> type_declaration .)


state 4

    (4) type_declaration -> class_declaration .

    ,               reduce using rule 4 (type_declaration -> class_declaration .)
    $end            reduce using rule 4 (type_declaration -> class_declaration .)


state 5

    (6) class_declaration -> class_header_name . class_body
    (11) class_body -> . opening_bracket classbodydecllist closing_bracket
    (15) opening_bracket -> . {

    {               shift and go to state 20

    class_body                     shift and go to state 18
    opening_bracket                shift and go to state 19

state 6

    (5) class_header_name -> modifiers_opt . CLASS NAME

    CLASS           shift and go to state 21


state 7

    (7) modifiers_opt -> modifiers .
    (10) modifiers -> modifiers . modifier
    (51) modifier -> . PUBLIC
    (52) modifier -> . PROTECTED
    (53) modifier -> . PRIVATE
    (54) modifier -> . STATIC
    (55) modifier -> . ABSTRACT
    (56) modifier -> . FINAL
    (57) modifier -> . NATIVE

    CLASS           reduce using rule 7 (modifiers_opt -> modifiers .)
    BOOLEAN         reduce using rule 7 (modifiers_opt -> modifiers .)
    VOID            reduce using rule 7 (modifiers_opt -> modifiers .)
    BYTE            reduce using rule 7 (modifiers_opt -> modifiers .)
    SHORT           reduce using rule 7 (modifiers_opt -> modifiers .)
    INT             reduce using rule 7 (modifiers_opt -> modifiers .)
    LONG            reduce using rule 7 (modifiers_opt -> modifiers .)
    CHAR            reduce using rule 7 (modifiers_opt -> modifiers .)
    FLOAT           reduce using rule 7 (modifiers_opt -> modifiers .)
    DOUBLE          reduce using rule 7 (modifiers_opt -> modifiers .)
    STRING          reduce using rule 7 (modifiers_opt -> modifiers .)
    NAME            reduce using rule 7 (modifiers_opt -> modifiers .)
    PUBLIC          shift and go to state 10
    PROTECTED       shift and go to state 11
    PRIVATE         shift and go to state 12
    STATIC          shift and go to state 13
    ABSTRACT        shift and go to state 14
    FINAL           shift and go to state 15
    NATIVE          shift and go to state 16

    modifier                       shift and go to state 22

state 8

    (8) modifiers_opt -> empty .

    CLASS           reduce using rule 8 (modifiers_opt -> empty .)
    BOOLEAN         reduce using rule 8 (modifiers_opt -> empty .)
    VOID            reduce using rule 8 (modifiers_opt -> empty .)
    BYTE            reduce using rule 8 (modifiers_opt -> empty .)
    SHORT           reduce using rule 8 (modifiers_opt -> empty .)
    INT             reduce using rule 8 (modifiers_opt -> empty .)
    LONG            reduce using rule 8 (modifiers_opt -> empty .)
    CHAR            reduce using rule 8 (modifiers_opt -> empty .)
    FLOAT           reduce using rule 8 (modifiers_opt -> empty .)
    DOUBLE          reduce using rule 8 (modifiers_opt -> empty .)
    STRING          reduce using rule 8 (modifiers_opt -> empty .)
    NAME            reduce using rule 8 (modifiers_opt -> empty .)


state 9

    (9) modifiers -> modifier .

    PUBLIC          reduce using rule 9 (modifiers -> modifier .)
    PROTECTED       reduce using rule 9 (modifiers -> modifier .)
    PRIVATE         reduce using rule 9 (modifiers -> modifier .)
    STATIC          reduce using rule 9 (modifiers -> modifier .)
    ABSTRACT        reduce using rule 9 (modifiers -> modifier .)
    FINAL           reduce using rule 9 (modifiers -> modifier .)
    NATIVE          reduce using rule 9 (modifiers -> modifier .)
    CLASS           reduce using rule 9 (modifiers -> modifier .)
    BOOLEAN         reduce using rule 9 (modifiers -> modifier .)
    VOID            reduce using rule 9 (modifiers -> modifier .)
    BYTE            reduce using rule 9 (modifiers -> modifier .)
    SHORT           reduce using rule 9 (modifiers -> modifier .)
    INT             reduce using rule 9 (modifiers -> modifier .)
    LONG            reduce using rule 9 (modifiers -> modifier .)
    CHAR            reduce using rule 9 (modifiers -> modifier .)
    FLOAT           reduce using rule 9 (modifiers -> modifier .)
    DOUBLE          reduce using rule 9 (modifiers -> modifier .)
    STRING          reduce using rule 9 (modifiers -> modifier .)
    NAME            reduce using rule 9 (modifiers -> modifier .)


state 10

    (51) modifier -> PUBLIC .

    PUBLIC          reduce using rule 51 (modifier -> PUBLIC .)
    PROTECTED       reduce using rule 51 (modifier -> PUBLIC .)
    PRIVATE         reduce using rule 51 (modifier -> PUBLIC .)
    STATIC          reduce using rule 51 (modifier -> PUBLIC .)
    ABSTRACT        reduce using rule 51 (modifier -> PUBLIC .)
    FINAL           reduce using rule 51 (modifier -> PUBLIC .)
    NATIVE          reduce using rule 51 (modifier -> PUBLIC .)
    CLASS           reduce using rule 51 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 51 (modifier -> PUBLIC .)
    VOID            reduce using rule 51 (modifier -> PUBLIC .)
    BYTE            reduce using rule 51 (modifier -> PUBLIC .)
    SHORT           reduce using rule 51 (modifier -> PUBLIC .)
    INT             reduce using rule 51 (modifier -> PUBLIC .)
    LONG            reduce using rule 51 (modifier -> PUBLIC .)
    CHAR            reduce using rule 51 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 51 (modifier -> PUBLIC .)
    DOUBLE          reduce using rule 51 (modifier -> PUBLIC .)
    STRING          reduce using rule 51 (modifier -> PUBLIC .)
    NAME            reduce using rule 51 (modifier -> PUBLIC .)


state 11

    (52) modifier -> PROTECTED .
